# neutralNEMO

./: LICENSE  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  orcaexample.rst  rectexample.rst  usage.rst
src/neutralNEMO/: eos.py  grid.py  surf.py
src/neutralNEMO_afstyles/: grid.py  surf.py
