[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neutralNEMO"
version = "0.9.4"
authors = [
  { name="Andrew Styles", email="afstylesocean@gmail.com" },
]
description = "A package to calculate approximate neutral surfaces with NEMO model output"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
  "neutralocean>=2.1.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/afstyles/neutralNEMO"
Issues = "https://github.com/afstyles/neutralNEMO/issues"
